tests/requests/invalid/022.py
from gunicorn.config import Config
from gunicorn.http.errors import UnsupportedTransferEncoding

cfg = Config()
request = UnsupportedTransferEncoding
